--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+def minecraft_version="1.12.2"
+def jei_version="4.8.5.144"
+def version_minetweaker="4.0.8.277"
+
 buildscript {
     repositories {
         jcenter()
@@ -7,13 +11,25 @@ buildscript {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
     }
 }
+
+repositories {
+    maven {
+        name 'DVS1 Maven FS'
+        url 'http://dvs1.progwml6.com/files/maven'
+    }
+    maven {
+	    name 'Blame Jared Maven'
+        url 'http://maven.blamejared.com'
+    }
+}
+
 apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
 version = "1.0"
-group = "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+group = "com.mjr.galacticrafttweaker" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "GalacticraftTweaker"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
@@ -23,37 +39,20 @@ compileJava {
 minecraft {
     version = "1.12.2-14.23.1.2566"
     runDir = "run"
-    
-    // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not always work.
-    // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "snapshot_20171003"
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
 dependencies {
-    // you may put jars on which you depend on in ./libs
-    // or you may define them like so..
-    //compile "some.group:artifact:version:classifier"
-    //compile "some.group:artifact:version"
-      
-    // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
-    //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
-    // except that these dependencies get remapped to your current MCP mappings
-    //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-    //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // for more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
+    deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-${version_minetweaker}"
+    compile "mezz.jei:jei_${minecraft_version}:${jei_version}:api"
+	compile files (
+		"Galacticraft-API-1.12.2-dev.jar",
+		"GalacticraftCore-Dev-1.12.2-4.0.1.0.jar",
+		"Galacticraft-Planets-Dev-1.12.2-4.0.1.0.jar",
+		"MicdoodleCore-Dev-1.12.2-4.0.1.0.jar"
+	)
+	runtime "mezz.jei:jei_${minecraft_version}:${jei_version}"
 
 }
 
