--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "1.12.2-1.0.0"
+version = "1.12.2-1.0.1"
 group = "com.mjr.galacticrafttweaker" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "GalacticraftTweaker"
 
@@ -47,10 +47,10 @@ dependencies {
     deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-${version_minetweaker}"
     compile "mezz.jei:jei_${minecraft_version}:${jei_version}:api"
 	compile files (
-		"Galacticraft-API-1.12.2-dev.jar",
-		"GalacticraftCore-Dev-1.12.2-4.0.1.0.jar",
-		"Galacticraft-Planets-Dev-1.12.2-4.0.1.0.jar",
-		"MicdoodleCore-Dev-1.12.2-4.0.1.0.jar"
+		"Galacticraft-API-1.12.2-4.0.1.138.jar",
+		"GalacticraftCore-Dev-1.12.2-4.0.1.138.jar",
+		"Galacticraft-Planets-Dev-1.12.2-4.0.1.138.jar",
+		"MicdoodleCore-Dev-1.12.2-4.0.1.138.jar"
 	)
 	runtime "mezz.jei:jei_${minecraft_version}:${jei_version}"
 
@@ -74,3 +74,17 @@ processResources {
         exclude 'mcmod.info'
     }
 }
+
+task signJar(type: SignJar, dependsOn: reobfJar) {
+    onlyIf {
+        project.hasProperty('keyStore')
+    }
+    keyStore = project.findProperty('keyStore')
+    alias = project.findProperty('keyStoreAlias')
+    storePass = project.findProperty('keyStorePass')
+    keyPass = project.findProperty('keyStoreKeyPass')
+    inputFile = jar.archivePath
+    outputFile = jar.archivePath
+}
+
+build.dependsOn signJar
