Fixed an issue with build.grade trying to run curseforge when setting up a dev workspace

--- a/build.gradle
+++ b/build.gradle
@@ -89,12 +89,14 @@ task signJar(type: SignJar, dependsOn: reobfJar) {
 }
 
 curseforge {
-	apiKey = project.findProperty("curseforge_key")
-	project {
-		id = "286116"
-		releaseType = "release"
-		addGameVersion "${minecraft_version}"
-		mainArtifact(jar) {
+    if (project.hasProperty('curseforge_key')){
+		apiKey = project.findProperty("curseforge_key")
+		project {
+			id = "286116"
+			releaseType = "release"
+			addGameVersion "${minecraft_version}"
+			mainArtifact(jar) {
+			}
 		}
 	}
 }
