--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 def minecraft_version="1.12.2"
 def jei_version="4.8.5.144"
 def version_minetweaker="4.0.8.277"
+def version_galacticraft="1.12.2-4.0.2.255"
 
 buildscript {
     repositories {
@@ -53,10 +54,10 @@ dependencies {
     deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-${version_minetweaker}"
     compile "mezz.jei:jei_${minecraft_version}:${jei_version}:api"
 	compile files (
-		"Galacticraft-API-1.12.2-4.0.1.181.jar",
-		"GalacticraftCore-Dev-1.12.2-4.0.1.181.jar",
-		"Galacticraft-Planets-Dev-1.12.2-4.0.1.181.jar",
-		"MicdoodleCore-Dev-1.12.2-4.0.1.181.jar"
+		"Galacticraft-API-${version_galacticraft}.jar",
+		"GalacticraftCore-Dev-${version_galacticraft}.jar",
+		"Galacticraft-Planets-Dev-${version_galacticraft}.jar",
+		"MicdoodleCore-Dev-${version_galacticraft}.jar"
 	)
 	runtime "mezz.jei:jei_${minecraft_version}:${jei_version}"
 
