--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ def minecraft_version="1.12.2"
 def jei_version="4.8.5.144"
 def version_minetweaker="4.0.8.277"
 def version_galacticraft="1.12.2-4.0.2.255"
+def version_ic2="2.8.99-ex112"
 
 buildscript {
     repositories {
@@ -24,6 +25,10 @@ repositories {
     maven {
         name 'DVS1 Maven FS'
         url 'http://dvs1.progwml6.com/files/maven'
+    }
+    maven {
+        name 'IC2'
+        url = "https://maven.ic2.player.to"
     }
     maven {
 	    name 'Blame Jared Maven'
@@ -51,8 +56,9 @@ minecraft {
 }
 
 dependencies {
-    deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-${version_minetweaker}"
-    compile "mezz.jei:jei_${minecraft_version}:${jei_version}:api"
+	deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-${version_minetweaker}"
+	compile "mezz.jei:jei_${minecraft_version}:${jei_version}:api"
+	compile "net.industrial-craft:industrialcraft-2:${version_ic2}:api"
 	compile files (
 		"Galacticraft-API-${version_galacticraft}.jar",
 		"GalacticraftCore-Dev-${version_galacticraft}.jar",
